implement functionality to select a piece/field (for moving it later)

--- a/lib/chess_web/templates/game/game.html.leex
+++ b/lib/chess_web/templates/game/game.html.leex
@@ -1,5 +1,6 @@
 <h3>Game ID: <%= @game.id %></h3>
 
+Player: <%= @game.player1.selected_field.x %>
 <table class="chess-board">
   <thead>
     <th></th>
@@ -11,7 +12,7 @@
     <tr>
       <th><%= x %></th>
       <%= for y <- 1..8 do %>
-        <td class="<%= color(x, y) %>"><i class="fas <%= get_piece(@game.board.field, x, y) %>"></i></td>
+        <td phx-click="select_piece" phx-value-x="<%= x %>" phx-value-y="<%= y %>" class="<%= color(x, y) %> <%= is_selected?(@game.player1, x, y) %>"><i class="fas <%= get_piece(@game.board.field, x, y) %>"></i></td>
       <% end %>
       <th><%= x %></th>
     </tr>
